<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joao_paulo.memoria.MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="121dp"
        android:layout_height="98dp"
        android:layout_marginBottom="207dp"
        android:background="@android:drawable/spinner_background"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:elevation="6dp"
        android:onClick="alterar"
        android:text="@string/botao3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="121dp"
        android:layout_height="98dp"
        android:layout_marginBottom="330dp"
        android:background="@android:drawable/spinner_background"
        android:backgroundTint="@android:color/holo_blue_light"
        android:elevation="6dp"
        android:onClick="alterar"
        android:text="@string/botao2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="121dp"
        android:layout_height="98dp"
        android:layout_marginBottom="207dp"
        android:background="@android:drawable/spinner_background"
        android:backgroundTint="@android:color/holo_red_light"
        android:elevation="6dp"
        android:onClick="alterar"
        android:text="@string/botao4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="121dp"
        android:layout_height="98dp"
        android:layout_marginBottom="83dp"
        android:background="@android:drawable/spinner_background"
        android:backgroundTint="@color/yellow"
        android:elevation="6dp"
        android:onClick="alterar"
        android:text="@string/botao5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="121dp"
        android:layout_height="98dp"
        android:layout_marginBottom="83dp"
        android:background="@android:drawable/spinner_background"
        android:backgroundTint="@color/brown"
        android:elevation="6dp"
        android:onClick="alterar"
        android:text="@string/botao6"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="121dp"
        android:layout_height="98dp"
        android:layout_marginBottom="330dp"
        android:background="@android:drawable/spinner_background"
        android:backgroundTint="@color/green"
        android:elevation="6dp"
        android:onClick="alterar"
        android:text="@string/botao1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="23dp"
        android:background="@android:drawable/alert_dark_frame"
        android:max="6"
        android:progress="0"
        android:progressTint="@android:color/holo_red_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/progressBarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/progresso"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="11dp"
        app:layout_constraintRight_toLeftOf="@+id/button6"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="193dp"
        android:layout_height="55dp"
        android:text="@string/reinciar"
        android:onClick="restart"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/textViewPara1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:text="@string/parabens1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textViewPara2"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:text="@string/parabens2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="invisible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        android:layout_marginEnd="56dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="37dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
